# dou-script

./: .coverage  .env  .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  REFACTOR_ANALYSIS.md  REFACTOR_FINDINGS.md  REFACTOR_PHASE1_SUMMARY.md  REFACTOR_PHASE2_SUMMARY.md  REFACTOR_PHASE3_SUMMARY.md  REFACTOR_PLAN.md  TAILSCALE_SETUP.md  analisecoderabbit_debug.md  check_dou.sh  cron-dou.sh  download_dou.sh  inlabs_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  test-mre.py
.claude/: settings.json
.claude/commands/: format-code.md  install-deps.md  run-script.md  test-script.md
.claude/skills/repomix-reference-dou-script/: SKILL.md
.claude/skills/repomix-reference-dou-script/references/: files.md  project-structure.md  summary.md  tech-stack.md
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/notepads/refactor-phase3/: worker2-summary.md
.omc/state/: hud-state.json
docs/: ARQUITETURA.md  DIAGRAMA.md  VISAO_GERAL.md
dou/: __init__.py  config.py  utils.py
dou-script/skills/openclaw/: SKILL.md
logs/: testes-2026-03-04.md
public/python/: dou_config.py  dou_utils.py  inlabs-auto-download-pdf.py  inlabs-auto-download-xml.py  inlabs-filter-mre.py
scripts/: auto_download_xml.py  download_dou.py  test_mre.py
tests/: __init__.py  conftest.py  test_config.py  test_utils.py
