[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = ['.git', '__pycache__', '.venv', 'venv']
extend-ignore = ['E203', 'W503']
# Nota: Instale flake8-pyproject para ler esta configuração do pyproject.toml

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project]
name = "dou-script"
version = "1.0.0"
description = "Scripts para download automatizado do Diário Oficial da União"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
